--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
 
     <script>
         const SECRET_PASSWORD = 'comlordUltraSecret2025';  // CHANGE THIS!
-        const jsonUrl = '/invites.json';
+        const jsonUrl = 'public/invites.json';
 
         // Auto-load if unlocked
         if (localStorage.getItem('adminUnlocked')) {
